Added navigation component, inputed into layout and index had some removed boilerplate.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,12 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 ---
 
-<Layout title="SGL Trucking" />
+<Layout title="SGL Trucking">
+  <main class="h-[200vh]">
+    <!-- HERO -->
+    words
+  </main>
+</Layout>
 
 <style>
   main {
