--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="relative" <Header>
+  <body class="relative">
     <Header />
     <!-- WINDOW PANE DISPLAYS the NAVIGATION ON MOBILE VIEW -->
     <WindowPane />
