--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -2,6 +2,8 @@
 import Navigation from "./Navigation.astro";
 ---
 
-<div class="h-[100vh] bg-yellow-200 fixed top-0 right-0 overflow-hidden">
+<div
+  class="mobile-menu h-[100vh] bg-yellow-200 fixed top-0 right-0 overflow-hidden hidden"
+>
   <Navigation orientation="vertical" />
 </div>
