--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,13 @@
 ---
 import Header from "../components/Header.astro";
-import WindowPane from "../components/WindowPane.astro";
+import MobileMenu from "../components/MobileMenu.astro";
 
 interface Props {
   title: string;
 }
 
 const { title } = Astro.props;
+let isMobileView = false;
 ---
 
 <!doctype html>
@@ -22,7 +23,7 @@ const { title } = Astro.props;
   <body class="relative">
     <Header />
     <!-- WINDOW PANE DISPLAYS the NAVIGATION ON MOBILE VIEW -->
-    <WindowPane />
+    <MobileMenu />
     <!-- MAIN CONTENT -->
     <slot />
     <div>testing</div>
