--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,67 +24,8 @@ let isMobileView = false;
     <Header />
     <!-- WINDOW PANE DISPLAYS the NAVIGATION ON MOBILE VIEW -->
     <MobileMenu />
-    <!-- MAIN CONTENT -->
+    <!-- SLOT INJECTS 'PAGE' FOLDER DATA -->
     <slot />
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
     <!-- FOOTER -->
   </body>
 </html>
