--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,71 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
 ---
 
 <Layout title="SGL Trucking">
   <main class="h-[200vh]">
     <!-- HERO -->
     words
+
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
+    <div>testing</div>
   </main>
 </Layout>
 
