--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -3,9 +3,29 @@ import Navigation from "./Navigation.astro";
 ---
 
 <div
-  class="mobile-menu hidden flex overflow-hidden w-full top-0 absolute h-[100vh] bg-purple-50"
+  class="menu-overlay animate-fade-in hidden flex overflow-hidden w-full top-0 fixed h-[100vh] bg-purple-50 z-10"
 >
-  <div class="bg-yellow-200 w-1/3 right-0 absolute flex h-[100vh] z-50">
+  <div
+    class="mobile-menu animate-slide-in-left bg-yellow-200 w-1/3 right-0 absolute flex h-[100vh] z-50"
+  >
     <Navigation orientation="vertical" />
   </div>
 </div>
+
+<script>
+  //adds a click event to the Hamburger icon, shows the menu and hides overflow
+  const overlay = document.querySelector(".menu-overlay");
+  const menu = document.querySelector(".mobile-menu");
+
+  document.querySelector("button")?.addEventListener("click", () => {
+    overlay?.classList.toggle("hidden");
+    document.querySelector("html")?.classList.toggle("overflow-hidden");
+  });
+  // handles closing the menu by clicking the overlay
+  overlay?.addEventListener("click", (e) => {
+    const el = e.target as HTMLElement;
+    el.classList.contains("menu-overlay") &&
+      overlay?.classList.toggle("hidden") &&
+      document.querySelector("html")?.classList.toggle("overflow-hidden");
+  });
+</script>
