--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -6,7 +6,7 @@ import Navigation from "./Navigation.astro";
   class="menu-overlay animate-fade-in hidden flex overflow-hidden w-full top-0 fixed h-[100vh] bg-purple-50 z-10"
 >
   <div
-    class="mobile-menu animate-slide-in-left bg-yellow-200 w-1/3 right-0 absolute flex h-[100vh] z-50"
+    class="mobile-menu bg-yellow-200 w-6/12 right-0 absolute flex h-[100vh] z-50"
   >
     <Navigation orientation="vertical" />
   </div>
@@ -18,14 +18,26 @@ import Navigation from "./Navigation.astro";
   const menu = document.querySelector(".mobile-menu");
 
   document.querySelector("button")?.addEventListener("click", () => {
-    overlay?.classList.toggle("hidden");
+    overlay?.classList.remove("hidden");
+    menu?.classList.add("animate-slide-in-left");
     document.querySelector("html")?.classList.toggle("overflow-hidden");
   });
+
   // handles closing the menu by clicking the overlay
   overlay?.addEventListener("click", (e) => {
     const el = e.target as HTMLElement;
-    el.classList.contains("menu-overlay") &&
-      overlay?.classList.toggle("hidden") &&
+    const hideMenuAnimationEnd = () => {
+      overlay?.classList.add("hidden");
+      menu?.classList.remove("animate-slide-out-left");
       document.querySelector("html")?.classList.toggle("overflow-hidden");
+    };
+    if (el.classList.contains("menu-overlay")) {
+      menu?.classList.add("animate-slide-out-left");
+      menu?.addEventListener("animationend", hideMenuAnimationEnd);
+    }
+    setTimeout(
+      () => menu?.removeEventListener("animationend", hideMenuAnimationEnd),
+      250,
+    );
   });
 </script>
