--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,18 +1,24 @@
 ---
 import Navigation from "./Navigation.astro";
 import sglLogo from "../assets/sgl-Trucking.webp";
-import { getImage, Image } from "astro:assets";
+import { getImage } from "astro:assets";
 const foo = await getImage({ src: sglLogo });
-console.log(foo);
 ---
 
 <header
-  class="bg-zinc-200 w-full min-h-[14vh] sticky top-0 flex justify-between items-center px-4"
+  class="bg-zinc-200 w-full min-h-[14vh] sticky top-0 flex justify-between items-center px-4 py-2"
 >
-  <img src={foo} width="30" />
-  <!-- <img src={sglLogo.src} width="30" /> -->
+  <span class="w-1/4 min-w-32 max-w-36">
+    <img src={foo.src} />
+  </span>
+
   <!-- button opens MobileMenu component, check file for script -->
-  <button class="sm:hidden bg-slate-50 rounded-sm p-2"> [ = ] </button>
+  <button class="relative w-7 h-auto p-4">
+    <div
+      class="sm:hidden bg-gray-700 rounded-sm w-6 h-0.5 absolute top-0 left-0 after:content-[''] after:w-6 after:h-0.5 after:bg-gray-700 after:absolute after:top-3 after:left-0 before:content-[''] before:w-6 before:h-0.5 before:bg-gray-700 before:absolute before:top-6 before:left-0"
+    >
+    </div>
+  </button>
   <fragment class="hidden sm:flex w-full justify-end">
     <Navigation orientation="horizontal" />
   </fragment>
