--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -13,10 +13,10 @@ import Navigation from "./Navigation.astro";
 </div>
 
 <script>
-  //adds a click event to the Hamburger icon, shows the menu and hides overflow
   const overlay = document.querySelector(".menu-overlay");
   const menu = document.querySelector(".mobile-menu");
 
+  //Handle MobileMenu Hamburger icon, shows the menu and hides overflow
   document.querySelector("button")?.addEventListener("click", () => {
     overlay?.classList.remove("hidden");
     menu?.classList.add("animate-slide-in-left");
@@ -26,13 +26,17 @@ import Navigation from "./Navigation.astro";
   // handles closing the menu by clicking the overlay
   overlay?.addEventListener("click", (e) => {
     const el = e.target as HTMLElement;
+
+    // MENU CLOSE ON ANIMATION END EVENT HANDLER
     const hideMenuAnimationEnd = () => {
       overlay?.classList.add("hidden");
       menu?.classList.remove("animate-slide-out-left");
+      overlay?.classList.remove("animate-fade-out");
       document.querySelector("html")?.classList.toggle("overflow-hidden");
     };
     if (el.classList.contains("menu-overlay")) {
       menu?.classList.add("animate-slide-out-left");
+      overlay?.classList.add("animate-fade-out");
       menu?.addEventListener("animationend", hideMenuAnimationEnd);
     }
     setTimeout(
