--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,22 +1,21 @@
 ---
 import Navigation from "./Navigation.astro";
 import sglLogo from "../assets/sgl-Trucking.webp";
-import { getImage } from "astro:assets";
-const foo = await getImage({ src: sglLogo });
+import { Image } from "astro:assets";
 ---
 
-<fragment class="flex w-full justify-center">
+<fragment class="flex w-full fixed justify-center min-h-[14vh]">
   <header
-    class="bg-zinc-200 w-11/12 min-h-[14vh] fixed top-0 flex justify-between items-center px-4 py-2 transition-all duration-1000 ease-in-out"
+    class="bg-zinc-200 w-11/12 flex justify-between items-center px-4 py-2 transition-all duration-1000 ease-in-out"
   >
     <span class="w-1/4 min-w-32 max-w-36">
-      <img src={foo.src} />
+      <Image src={sglLogo} alt="SGL Trucking LTD." />
     </span>
 
     <!-- button opens MobileMenu component, check file for script -->
     <button class="relative w-7 h-auto p-4">
       <div
-        class="sm:hidden bg-gray-700 rounded-sm w-6 h-0.5 absolute top-0 left-0 after:content-[''] after:w-6 after:h-0.5 after:bg-gray-700 after:absolute after:top-3 after:left-0 before:content-[''] before:w-6 before:h-0.5 before:bg-gray-700 before:absolute before:top-6 before:left-0"
+        class="sm:hidden bg-gray-700 rounded-sm w-6 h-0.5 absolute top-0 left-0 after:content-[''] after:w-6 after:h-0.5 after:bg-gray-700 after:absolute after:top-2.5 after:left-0 before:content-[''] before:w-6 before:h-0.5 before:bg-gray-700 before:absolute before:top-5 before:left-0"
       >
       </div>
     </button>
@@ -27,7 +26,7 @@ const foo = await getImage({ src: sglLogo });
 </fragment>
 
 <script>
-  document.addEventListener("scroll", (e) => {
+  document.addEventListener("scroll", () => {
     const currY = window.scrollY;
     const header = document.querySelector("header");
     if (currY > 0 && !header?.classList.contains("w-full")) {
