--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import sglTruckingVideo from "../assets/SGL-Trucking-LTD.mp4";
 ---
 
 <Layout title="SGL Trucking">
+  <!-- HERO -->
+  <video src={sglTruckingVideo} autoplay="true"></video>
+  <!-- HERO END -->
   <main class="h-[200vh]">
-    <!-- HERO -->
-    words
-
     <div>testing</div>
     <div>testing</div>
     <div>testing</div>
