updated the mobile menu styles, Navigation styles for vertical mode, header minimum size for mobile button is now smaller that anything of LG size. Added the video to the index page and some styles.

--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -3,10 +3,10 @@ import Navigation from "./Navigation.astro";
 ---
 
 <div
-  class="menu-overlay animate-fade-in hidden flex overflow-hidden w-full top-0 fixed h-[100vh] bg-purple-50 z-10"
+  class="menu-overlay animate-fade-in hidden flex overflow-hidden w-full top-0 fixed h-[100vh] z-10 bg-gradient-to-b from-red-800 to-black to-65%"
 >
   <div
-    class="mobile-menu bg-yellow-200 w-6/12 right-0 absolute flex h-[100vh] z-50"
+    class="mobile-menu bg-amber-100 w-6/12 right-0 absolute flex h-[100vh] z-20"
   >
     <Navigation orientation="vertical" />
   </div>
