--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,9 @@ import sglLogo from "../assets/sgl-Trucking.webp";
 import { Image } from "astro:assets";
 ---
 
-<fragment class="flex w-full fixed justify-center min-h-[14vh]">
+<fragment class="flex w-full fixed justify-center min-h-[14vh] z-10">
   <header
-    class="bg-zinc-200 w-11/12 flex justify-between items-center px-4 py-2 transition-all duration-1000 ease-in-out"
+    class="bg-stone-100 w-11/12 flex justify-between items-center px-4 py-2 transition-all duration-1000 ease-in-out rounded-b-md border-b-2 border-x border-cyan-600 shadow-lg shadow-slate-700"
   >
     <span class="w-1/4 min-w-32 max-w-36">
       <Image src={sglLogo} alt="SGL Trucking LTD." />
@@ -15,11 +15,11 @@ import { Image } from "astro:assets";
     <!-- button opens MobileMenu component, check file for script -->
     <button class="relative w-7 h-auto p-4">
       <div
-        class="sm:hidden bg-gray-700 rounded-sm w-6 h-0.5 absolute top-0 left-0 after:content-[''] after:w-6 after:h-0.5 after:bg-gray-700 after:absolute after:top-2.5 after:left-0 before:content-[''] before:w-6 before:h-0.5 before:bg-gray-700 before:absolute before:top-5 before:left-0"
+        class="lg:hidden bg-gray-700 rounded-sm w-6 h-0.5 absolute top-0 left-0 after:content-[''] after:w-6 after:h-0.5 after:bg-gray-700 after:absolute after:top-2.5 after:left-0 before:content-[''] before:w-6 before:h-0.5 before:bg-gray-700 before:absolute before:top-5 before:left-0"
       >
       </div>
     </button>
-    <fragment class="hidden sm:flex w-full justify-end">
+    <fragment class="hidden lg:flex w-full justify-end">
       <Navigation orientation="horizontal" />
     </fragment>
   </header>
