--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -9,11 +9,39 @@ const { orientation } = Astro.props;
 <nav
   class={` flex text-center items-center ${orientation === "vertical" && "flex-col items-center w-full justify-evenly"}`}
 >
-  <a href="#" class="sm:ml-2.5 text-center px-2">Home</a>
-  <a href="#" class="sm:ml-2.5 text-center px-2">About</a>
-  <a href="#" class="sm:ml-2.5 text-center px-2">Our Services</a>
-  <a href="#" class="sm:ml-2.5 text-center px-2">Careers</a>
-  <a href="#" class="sm:ml-2.5 text-center px-2">Quick Quote</a>
-  <a href="#" class="sm:ml-2.5 text-center px-2">Driver Admission form</a>
-  <a href="#" class="sm:ml-2.5 text-center px-2">Contact Us</a>
+  <a
+    href="#"
+    class={`sm:ml-2.5 text-center px-2 ${orientation === "vertical" && "w-full py-4"}`}
+    >Home</a
+  >
+  <a
+    href="#"
+    class={`sm:ml-2.5 text-center px-2 ${orientation === "vertical" && "w-full py-4"}`}
+    >About</a
+  >
+  <a
+    href="#"
+    class={`sm:ml-2.5 text-center px-2 ${orientation === "vertical" && "w-full py-4"}`}
+    >Our Services</a
+  >
+  <a
+    href="#"
+    class={`sm:ml-2.5 text-center px-2 ${orientation === "vertical" && "w-full py-4"}`}
+    >Careers</a
+  >
+  <a
+    href="#"
+    class={`sm:ml-2.5 text-center px-2 ${orientation === "vertical" && "w-full py-4"}`}
+    >Quick Quote</a
+  >
+  <a
+    href="#"
+    class={`sm:ml-2.5 text-center px-2 ${orientation === "vertical" && "w-full py-4"}`}
+    >Driver Admission form</a
+  >
+  <a
+    href="#"
+    class={`sm:ml-2.5 text-center px-2 ${orientation === "vertical" && "w-full py-4"}`}
+    >Contact Us</a
+  >
 </nav>
