adding changes from laptop

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,14 @@ import sglTruckingVideo from "../assets/SGL-Trucking-LTD.mp4";
 
 <Layout title="SGL Trucking">
   <!-- HERO -->
-  <video autoplay muted loop class="h-[100vh] w-full object-fill">
-    <source src={sglTruckingVideo} type="video/mp4" />
-  </video>
+  <div class="text-white relative h-[100vh] w-full">
+    <video autoplay muted loop class="absolute top-0 object-fill h-[100vh]">
+      <source src={sglTruckingVideo} type="video/mp4" />
+    </video>
+    <div>
+      <h2 class="">yellow monster</h2>
+    </div>
+  </div>
   <!-- HERO -->
   <main class="h-[200vh]">
     <div>testing</div>
