--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import sglLogo from "../assets/sgl-Trucking.webp";
 import { Image } from "astro:assets";
 ---
 
-<fragment class="flex w-full fixed justify-center min-h-[14vh] z-10">
+<fragment class="flex w-full fixed justify-center min-h-[11vh] z-10">
   <header
     class="bg-stone-100 w-11/12 flex justify-between items-center px-4 py-2 transition-all duration-1000 ease-in-out rounded-b-md border-b-2 border-x border-cyan-600 shadow-lg shadow-slate-700"
   >
@@ -13,7 +13,7 @@ import { Image } from "astro:assets";
     </span>
 
     <!-- button opens MobileMenu component, check file for script -->
-    <button class="relative w-7 h-auto p-4">
+    <button class="relative w-7 h-auto p-4" aria-label="Mobile menu button">
       <div
         class="lg:hidden bg-gray-700 rounded-sm w-6 h-0.5 absolute top-0 left-0 after:content-[''] after:w-6 after:h-0.5 after:bg-gray-700 after:absolute after:top-2.5 after:left-0 before:content-[''] before:w-6 before:h-0.5 before:bg-gray-700 before:absolute before:top-5 before:left-0"
       >
@@ -35,8 +35,6 @@ import { Image } from "astro:assets";
     } else if (currY === 0 && header?.classList.contains("w-full")) {
       header.classList.remove("w-full");
       header?.classList.add("w-11/12");
-    } else {
-      console.log("wtf");
     }
   });
 </script>
