updated the pop up menu drop down styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,72 +20,27 @@ import sglTruckingVideo from "../assets/SGL-Trucking-LTD.mp4";
     >
       <h1 class="font-bold text-6xl">SGL TRUCKING LTD.</h1>
       <p class="text-xl font-light">
-        LOGISTICS AND TRUCK TRANSPORT COMPANY IN SURREY / DELTA, BRITISH
-        COLUMBIA
+        LOGISTICS AND TRUCKING COMPANY IN SURREY / DELTA, BRITISH COLUMBIA
       </p>
     </div>
   </div>
   <!-- HERO -->
   <main class="h-[200vh]">
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
-    <div>testing</div>
+    <h2 class="text-3xl">
+      SGL Trucking Ltd. - Trucking Company in Surrey / Delta B.C.
+    </h2>
+    <p>
+      SGL Trucking Ltd. is a Logistics and Trucking company based in Surrey /
+      Delta B.C. Canada. It was established in 2010, since this time we have
+      acquired experienced, professional employees/drivers who are constantly
+      thriving for excellence. Their motivation has quickly turned this company
+      into one of the largest transportation companies in The Greater Vancouver
+      Region. SGL trucking Ltd. thrives on meeting our customers’ needs. Our
+      experience have allowed us to provide our customers with reliable and on
+      time service. SGL Trucking Ltd. understands that the transportation
+      industry is constantly advancing and in order to remain competitive and
+      effective we are continuously expanding our services.
+    </p>
   </main>
 </Layout>
 
