added massive ammount of content to the index page. will commit to merge into main then start developing the footer branch, then pages.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,33 +24,177 @@ import sglTruckingVideo from "../assets/SGL-Trucking-LTD.mp4";
       </p>
     </div>
   </div>
-  <!-- HERO -->
-  <main class="h-[200vh]">
-    <h2 class="text-3xl">
-      SGL Trucking Ltd. - Trucking Company in Surrey / Delta B.C.
-    </h2>
-    <p>
-      SGL Trucking Ltd. is a Logistics and Trucking company based in Surrey /
-      Delta B.C. Canada. It was established in 2010, since this time we have
-      acquired experienced, professional employees/drivers who are constantly
-      thriving for excellence. Their motivation has quickly turned this company
-      into one of the largest transportation companies in The Greater Vancouver
-      Region. SGL trucking Ltd. thrives on meeting our customers’ needs. Our
-      experience have allowed us to provide our customers with reliable and on
-      time service. SGL Trucking Ltd. understands that the transportation
-      industry is constantly advancing and in order to remain competitive and
-      effective we are continuously expanding our services.
-    </p>
+  <!-- HERO END -->
+
+  <main class="h-auto text-stone-600 text-center">
+    <div class="w-full bg-slate-100 pt-12">
+      <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
+        <h2 class="text-4xl text-stone-800">SGL Trucking Ltd.</h2>
+        <h3 class="text-2xl text-stone-800">
+          A trucking Company situated in Surrey / Delta B.C.
+        </h3>
+        <br />
+
+        <p>
+          SGL Trucking Ltd. is a Logistics and Trucking company based in Surrey
+          / Delta B.C. Canada. It was established in 2010, since this time we
+          have acquired experienced, professional employees/drivers who are
+          constantly thriving for excellence. Their motivation has quickly
+          turned this company into one of the largest transportation companies
+          in The Greater Vancouver Region.
+
+          <br />
+          <br />
+
+          SGL trucking Ltd. thrives on meeting our customers’ needs. Our
+          experience have allowed us to provide our customers with reliable and
+          on time service. SGL Trucking Ltd. understands that the transportation
+          industry is constantly advancing and in order to remain competitive
+          and effective we are continuously expanding our services.
+        </p>
+      </div>
+    </div>
+
+    <div class="w-full bg-stone-200 pt-12">
+      <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
+        <h3 class="text-4xl text-center text-stone-800">
+          Why choose SGL Trucking LTD?
+        </h3>
+        <br />
+        <p>
+          SGL Trucking has emerged as a leading international trucking company
+          in Canada and the United States of America. By blending the latest in
+          trucking and transport technology with the traditional values of
+          quality services, on-time delivery and responding to the needs of the
+          customer, our company has become the service carrier of choice. After
+          all those years of work and dedication SGL Trucking has made their
+          name in the International market as the most reliable Trucking
+          Company. SGL Trucking Ltd. is the reliable source for all your
+          trucking and transportation needs. We can handle all kind of loads
+          whether its a dry trailor, thin wall trailer, heated trailer or any
+          size and weight. We can manage your load and can deliver it anywhere
+          in US and Canada. We have our own Truck and Trailor insurance;
+          therefore, we got you covered, you don't have to worry about the load.
+          Your load is in safe and secure hands.
+        </p>
+      </div>
+    </div>
+
+    <div class="w-full bg-stone-200 pt-12">
+      <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
+        <h3 class="text-4xl text-center text-stone-800">
+          Freight all over the US and Canada.
+        </h3>
+        <br />
+        <p>
+          Our goal at SGL Trucking is to provide the highest level of
+          transportation services as well as safe and timely deliveries, with
+          fair and competitive pricing while providing a safe workplace for our
+          employees and maintaining integrity, fairness and honesty with our
+          customers and business partners.
+        </p>
+        <div class="w-full flex justify-center mt-4">
+          <button
+            class="bg-blue-600 text-base py-2 px-6 rounded text-slate-50 transition-colors hover:bg-blue-500"
+            >Request a Quote</button
+          >
+        </div>
+      </div>
+    </div>
+
+    <div class="w-full bg-stone-100 pt-12">
+      <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
+        <h3 class="text-4xl text-center text-stone-800">
+          Environmental Policy
+        </h3>
+        <br />
+        <p>
+          SGL Trucking Ltd. operates a fleet of trucks and trailers, it is vital
+          that we abide by a strict environmental policy which helps us avoid
+          leaving a disastrous and costly negative environmental impact for
+          future generations and wildlife.
+        </p>
+      </div>
+
+      <div class="flex flex-col">
+        <div
+          class="text-left m-auto p-4 max-w-[calc(100% - 2rem)] flex flex-col sm:flex-row"
+        >
+          <div class="w-full sm:w-1/2 px-1.5">
+            cool img here
+            <h3 class="text-2xl text-center text-stone-800">
+              Company Expectations
+            </h3>
+            <br />
+            <p class="text-base">
+              Employment of a truck and trailer maintenance program which
+              ensures used parts, waste oil and any other by-products are
+              disposed of and recycled in a responsible manner. Our trucks are
+              outfitted with all EPA (Environment Protection Agency) emissions
+              control equipment to reduce carbon footprint. Our fleet is
+              maximally maintained to ensure efficient operation. Our drivers
+              are actively trained to employ our environmental policies.
+              Conservation, reduction, reusing and recylcing are used whenever
+              possible along with our constant search of new technologies and
+              innovative practices to limit waste and usage of resources.
+            </p>
+          </div>
+          <div class="w-full sm:w-1/2 px-1.5">
+            cool img here
+            <h3 class="text-2xl text-center text-stone-800">
+              Driver Expectations
+            </h3>
+            <br />
+            <p class="text-base">
+              Speeding is the number one source of poor fuel mileage and
+              unnecessary carbon emissions that is within the driver's control.
+              We encourage our drivers to drive at the posted speed limits. Our
+              drivers are also directed to leave their trash in proper waste
+              disposal containers and recycle bottles and other recyclables
+              wherever possible while out on a trip.Speeding is the number one
+              source of poor fuel mileage and unnecessary carbon emissions that
+              is within the driver's control. We encourage our drivers to drive
+              at the posted speed limits. Our drivers are also directed to leave
+              their trash in proper waste disposal containers and recycle
+              bottles and other recyclables wherever possible while out on a
+              trip.
+            </p>
+          </div>
+        </div>
+        <div>
+          <button
+            class="bg-orange-600 text-base py-2 px-6 rounded text-slate-50 transition-colors hover:bg-orange-500"
+            >Read More
+          </button>
+        </div>
+        <br />
+        <br />
+      </div>
+
+      <div class="w-full bg-sky-600 pt-12 text-slate-50">
+        <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
+          <h3 class="text-3xl text-center">Are you looking for work?</h3>
+          <h2 class="text-2xl text-center">We are hiring!</h2>
+          <br />
+          <p class="text-base">
+            Do you have a Class 1 License with Air brake certificate?
+            <br />
+            Do you have relevant driving experience in US and Canada?
+          </p>
+          <div class="w-full flex justify-center mt-4">
+            <button
+              class="bg-orange-600 text-base py-2 px-6 rounded text-slate-50 transition-colors hover:bg-orange-500"
+              >Apply Today</button
+            >
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 </Layout>
 
 <style>
   main {
-    margin: auto;
-    padding: 1rem;
-    width: 800px;
-    max-width: calc(100% - 2rem);
-    color: white;
     font-size: 20px;
     line-height: 1.6;
   }
