--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,11 +15,11 @@ import { Image } from "astro:assets";
     <!-- button opens MobileMenu component, check file for script -->
     <button class="relative w-7 h-auto p-4" aria-label="Mobile menu button">
       <div
-        class="lg:hidden bg-gray-700 rounded-sm w-6 h-0.5 absolute top-0 left-0 after:content-[''] after:w-6 after:h-0.5 after:bg-gray-700 after:absolute after:top-2.5 after:left-0 before:content-[''] before:w-6 before:h-0.5 before:bg-gray-700 before:absolute before:top-5 before:left-0"
+        class="md:hidden bg-gray-700 rounded-sm w-6 h-0.5 absolute top-0 left-0 after:content-[''] after:w-6 after:h-0.5 after:bg-gray-700 after:absolute after:top-2.5 after:left-0 before:content-[''] before:w-6 before:h-0.5 before:bg-gray-700 before:absolute before:top-5 before:left-0"
       >
       </div>
     </button>
-    <fragment class="hidden lg:flex w-full justify-end">
+    <fragment class="hidden md:flex w-full justify-end">
       <Navigation orientation="horizontal" />
     </fragment>
   </header>
