made some changed to index styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,10 +16,10 @@ import sglTruckingVideo from "../assets/SGL-Trucking-LTD.mp4";
       <source src={sglTruckingVideo} type="video/mp4" />
     </video>
     <div
-      class="absolute bottom-1/4 w-full flex justify-center flex-col text-center"
+      class="absolute bottom-1/4 w-full flex justify-center flex-col text-center px-4"
     >
-      <h1 class="font-bold text-6xl">SGL TRUCKING LTD.</h1>
-      <p class="text-xl font-light">
+      <h1 class="text-4xl sm:text-6xl mb-2">SGL TRUCKING LTD.</h1>
+      <p class="text-base sm:text-xl font-light">
         LOGISTICS AND TRUCKING COMPANY IN SURREY / DELTA, BRITISH COLUMBIA
       </p>
     </div>
@@ -116,9 +116,9 @@ import sglTruckingVideo from "../assets/SGL-Trucking-LTD.mp4";
         </p>
       </div>
 
-      <div class="flex flex-col">
+      <div class="flex flex-col pt-4 sm:pt-0">
         <div
-          class="text-left m-auto p-4 max-w-[calc(100% - 2rem)] flex flex-col sm:flex-row"
+          class="text-left m-auto p-4 flex flex-col sm:flex-row min-w-[calc(100% - 2rem)] max-w-[800px]"
         >
           <div class="w-full sm:w-1/2 px-1.5">
             cool img here
@@ -172,7 +172,7 @@ import sglTruckingVideo from "../assets/SGL-Trucking-LTD.mp4";
       </div>
 
       <div class="w-full bg-sky-600 pt-12 text-slate-50">
-        <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
+        <div class="m-auto p-4 max-w-[calc(100% - 2rem)]">
           <h3 class="text-3xl text-center">Are you looking for work?</h3>
           <h2 class="text-2xl text-center">We are hiring!</h2>
           <br />
@@ -197,12 +197,5 @@ import sglTruckingVideo from "../assets/SGL-Trucking-LTD.mp4";
   main {
     font-size: 20px;
     line-height: 1.6;
-  }
-  h1 {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 1;
-    text-align: center;
-    margin-bottom: 1em;
   }
 </style>
