some changes to styles in various files, begun work on the footer.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -37,7 +37,7 @@ const { orientation } = Astro.props;
       text={"Contact Us"}
       subTexts={[
         { text: "Contact", path: "#" },
-        { text: "Contact", path: "#" },
+        { text: "Careers", path: "#" },
       ]}
       orientation={orientation}
     />
