--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import MobileMenu from "../components/MobileMenu.astro";
 
@@ -27,5 +28,6 @@ let isMobileView = false;
     <!-- SLOT INJECTS 'PAGE' FOLDER DATA -->
     <slot />
     <!-- FOOTER -->
+    <Footer />
   </body>
 </html>
