--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,7 +171,7 @@ import sglTruckingVideo from "../assets/SGL-Trucking-LTD.mp4";
         <br />
       </div>
 
-      <div class="w-full bg-sky-600 pt-12 text-slate-50">
+      <div class="w-full bg-sky-600 py-6 text-slate-50">
         <div class="m-auto p-4 max-w-[calc(100% - 2rem)]">
           <h3 class="text-3xl text-center">Are you looking for work?</h3>
           <h2 class="text-2xl text-center">We are hiring!</h2>
